# excel-like-app

./: components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  xlsx_core.rs
src/app/: App.tsx
src/features/: WorksheetSelector.tsx
src/pages/document-page/: DocumentPage.tsx
src/pages/main-page/: MainPage.tsx
src/widgets/: SpreadSheetWidget.tsx
