[package]
name = "excel-like-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-remove-file", "fs-read-dir", "fs-create-dir", "fs-copy-file", "fs-exists", "fs-rename-file", "fs-read-file", "fs-write-file", "fs-remove-dir", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.24.0"
thiserror = "1.0.59"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
